# ExtModule-004

./: ReadMe.md
FW/: ReadMe.md
FW/001-base_lowspeed/: .gitignore  ReadMe.md
FW/001-base_lowspeed/base_lowspeed/: .cproject  .project  .template  base_lowspeed.wvproj
FW/001-base_lowspeed/base_lowspeed/ETH_Driver/: eth_driver.c  eth_driver.h
FW/001-base_lowspeed/base_lowspeed/Ld/: Link.ld
FW/001-base_lowspeed/base_lowspeed/Lwip_Port/: lwipopts.h  sys_arch.c
FW/001-base_lowspeed/base_lowspeed/Lwip_Port/arch/: cc.h  sys_arch.h
FW/001-base_lowspeed/base_lowspeed/Peripheral/inc/: ch32v20x.h
FW/001-base_lowspeed/base_lowspeed/User/: ch32v20x_conf.h  ch32v20x_it.c  ch32v20x_it.h  debug.c  debug.h  hbox_config.c  hbox_config.h  hbox_eth.c  hbox_eth.h  hbox_port.c  hbox_shell.c  hbox_shell.h  main.c  system_ch32v20x.c  system_ch32v20x.h  udp_devcfg.c  udp_devcfg.h
SOFT/: ReadMe.md
SOFT/devcfg/: CMakeLists.txt  ReadMe.md  main.cpp
SOFT/devcfg/fs/: banner
